<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:id="@+id/RelativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:keepScreenOn="true">

    <fragment class="com.google.android.gms.maps.MapFragment"
              style="@style/map"
              android:id="@+id/flightMap"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"/>

    <LinearLayout android:id="@+id/dataBlock"
                  style="@style/dataItemsBackground"
                  android:visibility="visible"
                  android:layout_height="wrap_content"
                  android:layout_alignParentTop="true"
                  android:orientation="vertical">

        <LinearLayout android:id="@+id/dataLabels"
                      style="@style/dataItemsBackground"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_alignParentTop="true">

            <TextView style="@style/dataLabels"
                      android:id="@+id/text1"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="left"
                      android:layout_weight="1"
                      android:text="@string/speed"
                    />

            <TextView style="@style/dataLabels"
                      android:id="@+id/text2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:text="@string/track"
                      android:layout_weight="1"/>

            <TextView style="@style/dataLabels"
                      android:id="@+id/text3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="right"
                      android:layout_weight="1"
                      android:text="@string/altitude"/>

        </LinearLayout>

        <LinearLayout style="@style/dataItemsBackground"
                      android:orientation="horizontal"
                      android:id="@+id/dataItems">

            <TextView style="@style/dataItems"
                      android:id="@+id/speed"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/dashes"
                      android:layout_weight="1"
                      android:textSize="40dp"/>

            <TextView style="@style/dataItems"
                      android:id="@+id/track"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:layout_weight="1"
                      android:text="@string/dashes"/>

            <TextView style="@style/dataItems"
                      android:id="@+id/altitude"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:gravity="right"
                      android:text="@string/dashes"
                      android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/routeControls1"
                  android:orientation="vertical"
                  android:layout_alignParentRight="true"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:clickable="true"
                  android:background="#31000000">
        <Button android:id="@+id/routeAddButton"
                style="@style/menuItems.planButtons"
                android:text="\u002B"/>
        <Button style="@style/menuItems.planButtons"
                android:id="@+id/routeInsertButton"
                android:text="\u21D2"/>
        <Button style="@style/menuItems.planButtons"
                android:id="@+id/routeClearSelection"
                android:layout_marginTop="5mm"
                android:text="CLR"/>

    </LinearLayout>
    <LinearLayout android:id="@+id/routeControls2"
                  android:orientation="vertical"
                  android:layout_alignParentRight="true"
                  android:layout_centerVertical="true"
                  android:visibility="visible"
                  android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="true"
                  android:background="#31000000">
        <Button style="@style/menuItems.planButtons"
                android:id="@+id/routeMoveBeforeButton"
                android:text="\u2934"/>
        <Button style="@style/menuItems.planButtons"
                android:id="@+id/routeMoveAfterButton"
                android:text="\u2935"/>
        <Button style="@style/menuItems.planButtons"
                android:id="@+id/routeDeleteButton"
                android:layout_marginTop="5mm"
                android:text="\u2718"/>
        <Button style="@style/menuItems.planButtons"
                android:id="@+id/routeClearSelection2"
                android:layout_marginTop="5mm"
                android:text="CLR"/>
    </LinearLayout>

    <View android:id="@+id/anchor_bottom_right"
          android:layout_width="0dp"
          android:layout_height="20dp"
          android:layout_alignParentRight="true"
          android:layout_alignParentBottom="true"
          />
    <ImageButton android:id="@+id/menuButton"
                 android:src="@drawable/menuicon"
                 style="@style/menuButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/anchor_bottom_right"
                 android:layout_toLeftOf="@id/anchor_bottom_right"
                 android:paddingBottom="10dp"/>

    <LinearLayout android:layout_height="match_parent"
                  android:id="@+id/mainMenu"
                  android:orientation="horizontal"
                  android:layout_alignTop="@id/menuButton"
                  android:layout_toLeftOf="@id/menuButton"
                  android:layout_alignBottom="@id/menuButton"
                  android:layout_width="fill_parent">

        <Button android:id="@+id/clearRoute" android:text="@string/wipe" style="@style/menuItems"/>
        <Button android:id="@+id/undoClear" android:text="@string/undoWipe" style="@style/menuItems"/>
        <Button android:id="@+id/satViewToggle" android:text="@string/mapMode" style="@style/menuItems"/>
        <Button android:id="@+id/zoomButton" android:text="@string/zoom" style="@style/menuItems"/>
        <Button android:id="@+id/trackMode" android:text="@string/trackMode" style="@style/menuItems"/>

    </LinearLayout>

    <RelativeLayout android:id="@+id/planWindowView"
                  android:layout_width="@dimen/planWidth"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/dataBlock"
                  android:orientation="vertical"
                  android:animateLayoutChanges="true"
            android:layout_above="@id/mainMenu">

        <!-- Bug in the layout, unless this is specified first!!! -->
        <include android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/summaryRow"
                 layout="@layout/plan_summary"
                 android:layout_alignParentBottom="true"
                 android:gravity="center"
                 android:paddingTop="5dp"
                 style="@style/planListBase.planList"
                 android:paddingBottom="5dp"/>

        <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/planWaypointList"
                style="@style/planListBase.planList"
                android:layout_above="@id/summaryRow"
                android:choiceMode="singleChoice"
                tools:listitem="@layout/leg_item">
        </ListView>

    </RelativeLayout>

</RelativeLayout>